--- a/modules/custom/header_menu/scss/style.scss
+++ b/modules/custom/header_menu/scss/style.scss
@@ -8,8 +8,8 @@ $header-menu-z-index: 100;
 $header-menu-widescreen-view-dropdown-container-background-color: white;
 $header-menu-widescreen-view-dropdown-item-width: 200px;
 $header-menu-mobile-view-background-color: white;
-$header-menu-mobile-view-header-background-color: rgb(0, 173, 238);
-$header-menu-mobile-view-header-hover-background-color: #3571a1;
+$header-menu-mobile-view-header-background-color: #e30a0c;
+$header-menu-mobile-view-header-hover-background-color: #a00405;
 $header-menu-mobile-view-header-title-color: white;
 
 .header_menu_drupal_menu {
