--- a/themes/elucid/components/vehicles/sass/vehicles.scss
+++ b/themes/elucid/components/vehicles/sass/vehicles.scss
@@ -6,7 +6,7 @@
   @include styleguide;
 
   .nolij-vehicles-component {
-    @include padded-content-block(45px 25px 30px);
+    @include padded-content-block(45px 25px 30px, 25px 10px);
     background-color: white;
     border: solid 18px #437ca5;
 
@@ -18,6 +18,7 @@
         color: $blue-dark;
         font-family: $second-font-family;
         font-size: 55px;
+        @include tablet(font-size, 30px);
         font-weight: 300;
         text-transform: uppercase;
       }
@@ -29,6 +30,7 @@
       }
       .nolij-vehicles-component-details {
         display: flex;
+        @include tablet(flex-direction, column);
 
         .nolij-vehicles-component-card-title {
           @include strip-margins;
@@ -42,6 +44,7 @@
           flex-grow: 1;
           margin-right: 25px;
           @include tablet(margin-right, 0);
+          @include tablet(margin-bottom, 25px);
           width: 602px;
           @include tablet(width, 100%);
 
