--- a/themes/elucid/sass/features/header.scss
+++ b/themes/elucid/sass/features/header.scss
@@ -291,7 +291,7 @@ header {
         .menu_slide_extra_item {
           border-bottom: 1px solid $gray-lightest;
           color: $gray-dark;
-          padding: $margin-xsmall $margin-small;
+          padding: $margin-small $margin-small;
           text-transform: uppercase;
           a {
             color: $gray-dark;
