--- a/themes/elucid/templates/page--front.html.twig
+++ b/themes/elucid/templates/page--front.html.twig
@@ -108,7 +108,7 @@
             <span class="elucid_bold">NOLIJ CONSULTING</span>
             <p><span class="elucid_address">8609 Westwood Center Drive,<br/>5th Floor,<br/>Vienna, VA 22182</span></p>
             <p><span class="elucid_phone">571.765.3046</span></p> 
-            <p><a class="elucid_email" href="mailto://info@elucidsolutions.com">info@elucidsolutions.com</a></p>
+            <p><a class="elucid_email" href="mailto:information@nolijconsulting.com">information@nolijconsulting.com</a></p>
           </div>
         </div>
         <div class="footer_med_right">
