--- a/themes/elucid/templates/page.html.twig
+++ b/themes/elucid/templates/page.html.twig
@@ -95,9 +95,10 @@
             {{ drupal_block ('footer_nav_menu') }}
           </div>
           <div class="company_info">
-            <span class="elucid_bold">Elucid Solutions, Inc.</span>
-            <p>4300 Montgomery Ave,<br>Suite 302,<br>Bethesda, MD 20814</p>
-            <p><span class="elucid_phone">301.652.8208</span></p> 
+            <span class="elucid_bold">NOLIJ CONSULTING</span>
+            <p><span class="elucid_address">8609 Westwood Center Drive,<br/>5th Floor,<br/>Vienna, VA 22182</span></p>
+            <p><span class="elucid_phone">571.765.3046</span></p> 
+            <p><a class="elucid_email" href="mailto:information@nolijconsulting.com">information@nolijconsulting.com</a></p>
           </div>
         </div>
         <div class="footer_med_right">
@@ -105,13 +106,12 @@
       </div>
       <div class="footer_bottom">
         <div class="footer_bottom_left">
-          <a href="mailto://info@elucidsolutions.com">info@elucidsolutions.com</a>
+          <div class="elucid_linkedin">Nolij Consulting on LinkedIn</div>
         </div>
         <div class="footer_bottom_right">
-          <div class="credits">&copy; 2017 Elucid Solutions, Inc.</div>
+          <div class="credits">&copy; 2018 Nolij Consulting LLC</div>
         </div>
       </div>
     </div>
   </footer>
 </div>{# /.layout-container #}
-
