--- a/themes/elucid/components/vehicles/sass/vehicles.scss
+++ b/themes/elucid/components/vehicles/sass/vehicles.scss
@@ -9,6 +9,7 @@
     @include padded-content-block(45px 25px 30px, 25px 10px);
     background-color: white;
     border: solid 18px #437ca5;
+    @include mobile(border-width, 5px);
 
     .nolij-vehicles-component-header {
       @include short-hrule-after;
@@ -50,18 +51,21 @@
 
           .nolij-vehicles-component-left-card-header {
             padding: 25px;
+            @include mobile(padding, 25px 10px);
 
             .nolij-vehicles-component-left-card-title {
               font-weight: 300;
             }
           }
           .nolij-vehicles-component-left-card-body {
-            padding: 0 25px 0;
+            padding: 0 25px;
+            @include mobile(padding, 0 10px);
 
             ul.nolij-vehicles-component-vehicles-list {
               @include strip-margins;
               list-style: none;
               margin-left: 20px;
+              @include mobile(margin-left, 10px);
 
               .nolij-vehicles-component-vehicles-list-item {
                 color: $blue-dark;
@@ -100,9 +104,15 @@
             color: $gray-text;
             font-size: 16px;
             padding: 15px 25px;
+            @include mobile(padding, 15px 10px);
 
             .nolij-vehicles-component-duns {
+              @include mobile(display, block);
               margin-right: 50px;
+              @include mobile(margin-right, 0);
+            }
+            .nolij-vehicles-component-cage {
+              @include mobile(display, block);
             }
           }
         }
@@ -123,6 +133,7 @@
             .nolij-vehicles-component-cert {
               margin-bottom: 20px;
               text-align: center;
+              @include mobile(text-align, left);
 
               .nolij-vehicles-component-cert-logo {
                 img {
